[workspace]
members = [
    "crates/pulse-cli",
    "crates/pulse-worker", 
    "crates/pulse-core",
    "crates/pulse-storage",
    "crates/pulse-p2p",
    "crates/pulse-executor",
    "crates/pulse-parser",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# P2P networking
libp2p = { version = "0.54", features = ["tcp", "mdns", "gossipsub", "identify", "kad", "noise", "yamux"] }
futures = "0.3"

# Storage and persistence
sled = "0.34"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Command line interface
clap = { version = "4.5", features = ["derive"] }

# Crypto for node identity
ed25519-dalek = "2.1"
rand = "0.8"

# Consensus and replication
parking_lot = "0.12"
tempfile = "3.12"

# Regex
regex = "1.10"

[workspace.dev-dependencies]
tokio-test = "0.4"
