[package]
name = "pulse-executor"
version = "0.1.0"
edition = "2021"
description = "Task execution engine for Pulse workflows"

[dependencies]
pulse-core = { path = "../pulse-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }