[package]
name = "pulse-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking and cluster coordination for Pulse"

[dependencies]
pulse-core = { path = "../pulse-core" }

tokio = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }